<resources>
    <string name="app_name">SelfJournal</string>
    <string name="self_graditude_journal">Self.Graditude.Journal</string>
    <string name="what_are_your_grateful_for_today">What are your Grateful for Today?</string>
    <string name="get_started">Get Started</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="or_text">Or</string>
    <string name="createaccount">Create Accunt</string>
    <string name="username">Username</string>
    <string name="background_image">Background Image</string>
    <string name="post_name">you</string>
    <string name="to_set_a_photo">To set a photo</string>
    <string name="post_today_date">Today</string>
    <string name="post_title">Title</string>
    <string name="post_your_thoughts">Your Thoughts...</string>
    <string name="post_save_button">Save</string>
    <string name="menu_title">Menu Title</string>
    <string name="sign_out">Sign Out</string>
    <string name="click_on_top_right_add_button_to_add_a_thought">Click on Top-Right Add Button to add a thought</string>
</resources>